# RobotSnake

./: joint_command.bag  lateral_undulation.txt  lateral_undulation.txt~  obstacles.txt  test.bag
data/: .~lock.jointPoses.csv#  jointPoses.txt
devel/: .catkin  _rosinstall  setup.sh
devel/include/driver_base/: ConfigString.h  ConfigValue.h  SensorLevels.h
devel/include/snakebot_collisions/: LinkContacts.h  SnakeContacts.h
devel/include/snakebot_input_interface/: Ctrl.h
devel/include/snakebot_kinematics/: kinematics.h  obstacles.h  snake_obstacles.h
devel/include/snakebot_labview_communication/: Collisions.h  Float64Array.h  Int32Array.h  LinkPoses.h
devel/include/snakebot_matlab_communication/: closestJoints.h  collision.h  collisionList.h  collisions.h  jointCandidates.h  pushPoints.h  pushpointCandidates.h  pushpointsvisual.h
devel/include/snakebot_position_control/: PositionControlEffort.h
devel/include/snakebot_propulsion_control/: PropulsionEffort.h  PropulsionEffortMamba.h
devel/include/snakebot_pushpoints/: Pushpoints.h  pushpointCandidates.h
devel/include/snakebot_robot_pose/: ObstaclePose.h  Pose.h  SnakePose.h
devel/include/snakebot_shape_control/: ShapeCurve.h
devel/include/snakebot_visual_data_topic_collector/: jointposes.h  obstacles.h  visual_data_topic_collector.h
devel/lib/hokuyo_node/: getFirmwareVersion  getID  hokuyo_node
devel/lib/laser_proc/: laser_proc
devel/lib/mocap_optitrack/: mocap_node
devel/lib/pkgconfig/: driver_base.pc  hokuyo_node.pc  laser_proc.pc  mocap_optitrack.pc  obstacle_spawner.pc  snakebot_collisions.pc  snakebot_description.pc  snakebot_effort_control.pc  snakebot_effort_selector.pc  snakebot_gazebo.pc  snakebot_hybrid_controller.pc  snakebot_input_interface.pc  snakebot_interface.pc  snakebot_kinematics.pc  snakebot_labview_communication.pc  snakebot_link_pose_interface.pc  snakebot_log.pc  snakebot_matlab_communication.pc  snakebot_obstacle_interface.pc  snakebot_position_control.pc  snakebot_propulsion_control.pc  urg_c.pc  (+10 more)
launch_snakebot/: collisions.sh  create_joint_controller_bag.sh  effort_selector.sh  gazebo.sh  kill_all.sh  kinematics.sh  labview_communication.sh~  launch_snakebot_pushpoints.sh~  matlab_communication.sh  mocap_optitrack.sh  position.sh~  position_control.sh  propulsion_control.sh  robot_pose.sh  shape_control.sh  start_snake_simulation.sh  start_snake_simulation.sh~  viewer.sh~  virtual_snake.sh  visual_data_topic_collector.sh  visualizer.sh  world_setup.sh
log/: 2017.5.30.19.10.41.rosMeasJoints.csv  2017.5.30.19.12.49.rosMeasJoints.csv  2017.5.30.19.16.42.rosMeasJoints.csv  2017.5.30.19.18.30.rosMeasJoints.csv  2017.5.30.19.19.25.rosMeasJoints.csv  2017.5.30.19.20.11.rosMeasJoints.csv  2017.5.30.19.25.3.rosMeasJoints.csv  2017.5.30.19.25.53.rosMeasJoints.csv  2017.5.30.19.25.53.rosRefJoints.csv  2017.5.30.19.8.31.rosMeasJoints.csv  2017.5.30.21.53.48.rosMeasJoints.csv  2017.5.30.21.53.48.rosRefJoints.csv  2017.5.31.14.28.16.labviewMeasJoints.csv  2017.5.31.14.28.16.rosMeasJoints.csv  2017.5.31.14.28.16.rosRefJoints.csv  2017.5.31.14.36.45.labviewMeasJoints.csv  2017.5.31.14.36.45.rosMeasJoints.csv  2017.5.31.14.36.45.rosRefJoints.csv  2017.5.31.18.16.9.labviewMeasJoints.csv  2017.5.31.18.16.9.rosMeasJoints.csv  2017.5.31.18.16.9.rosRefJoints.csv
src/: CMakeLists.txt
src/obstacle_spawner/: CMakeLists.txt  object.urdf
src/snakebot_collisions/: CMakeLists.txt  package.xml
src/snakebot_collisions/launch/: snakebot_collisions.launch
src/snakebot_collisions/msg/: LinkContacts.msg  SnakeContacts.msg
src/snakebot_collisions/src/: bumper.cpp  bumper.h  collisions.cpp  collisions.h  geometry.cpp  geometry.h  main.cpp
src/snakebot_description/: CMakeLists.txt  package.xml
src/snakebot_effort_control/: CMakeLists.txt  package.xml
src/snakebot_effort_selector/: CMakeLists.txt  package.xml
src/snakebot_effort_selector/launch/: snakebot_effort_selector.launch
src/snakebot_effort_selector/src/: effortselector.cpp  effortselector.h  main.cpp
src/snakebot_gazebo/: CMakeLists.txt
src/snakebot_input_interface/: CMakeLists.txt  package.xml
src/snakebot_input_interface/msg/: Ctrl.msg
src/snakebot_input_interface/src/: inputinterface.cpp  inputinterface.h  main.cpp
src/snakebot_kinematics/: CMakeLists.txt  package.xml
src/snakebot_labview_communication/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/snakebot_log/: CMakeLists.txt~  package.xml  package.xml~
src/snakebot_matlab_communication/: CMakeLists.txt
src/snakebot_position_control/: CMakeLists.txt  CMakeLists.txt~
src/snakebot_propulsion_control/: CMakeLists.txt  package.xml
src/snakebot_propulsion_control/launch/: snakebot_propulsion_control.launch
src/snakebot_propulsion_control/msg/: PropulsionEffort.msg
src/snakebot_propulsion_control/src/: main.cpp  propulsioncontroller.cpp  propulsioncontroller.h
src/snakebot_pushpoints/: CMakeLists.txt  package.xml
src/snakebot_pushpoints/launch/: snakebot_pushpoints.launch
src/snakebot_pushpoints/msg/: Pushpoints.msg
src/snakebot_pushpoints/src/: Benken  main.cpp  pushpointextractor.cpp  pushpointextractor.h
src/snakebot_robot_pose/: CMakeLists.txt
src/snakebot_robot_pose/launch/: snakebot_robot_pose.launch
src/snakebot_robot_pose/msg/: ObstaclePose.msg  Pose.msg  SnakePose.msg
src/snakebot_robot_pose/src/: main.cpp
src/snakebot_shape_control/: CMakeLists.txt
src/snakebot_shape_control/launch/: snakebot_shape_control.launch
src/snakebot_shape_control/msg/: ShapeCurve.msg
src/snakebot_shape_control/src/: main.cpp  temp.txt  virtualsnake.cpp  virtualsnake.h
src/snakebot_spawner/: CMakeLists.txt  package.xml  readme_spawner.txt
src/snakebot_spawner/src/: main.cpp
src/snakebot_visual_data_topic_collector/: CMakeLists.txt
src/snakebot_visualizer/: CMakeLists.txt  package.xml  readme_viewer.txt
src/snakebot_visualizer/launch/: snakebot_visualizer.launch
src/snakebot_visualizer/src/: datatypes.cpp  datatypes.h  main.cpp  rvizpublisher.cpp  rvizpublisher.h  statesubscriber.cpp  statesubscriber.h
src/world_setup/: CMakeLists.txt
(+270 files in other folders)
